Profile Edit Page Completed.

--- a/app/src/main/res/layout/edit_page.xml
+++ b/app/src/main/res/layout/edit_page.xml
@@ -54,7 +54,7 @@
                 style="@style/TextAppearance.AppCompat.Button"
                 android:layout_width="85dp"
                 android:layout_height="40dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="16dp"
                 android:background="@drawable/transparentbutton"
                 android:fontFamily="@font/roboto"
                 android:padding="5dp"
@@ -91,14 +91,13 @@
             </com.google.android.material.textfield.TextInputLayout>
 
 
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayout2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">
@@ -107,13 +106,13 @@
                     android:id="@+id/eidedittext"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="Employee ID"
-                    android:text="E-1212"
-                    android:focusable="false"
+                    android:digits="0123456789|QWERTYUIOPASDFGHJKLZXCVBNM|qwertyuiopasdfghjklzxcvbnm"
                     android:enabled="false"
+                    android:focusable="false"
+                    android:hint="Employee ID"
                     android:inputType="textPersonName"
                     android:maxLength="8"
-                    android:digits="0123456789|QWERTYUIOPASDFGHJKLZXCVBNM|qwertyuiopasdfghjklzxcvbnm"/>
+                    android:text="E-1212" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -123,7 +122,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -133,11 +132,11 @@
                     android:id="@+id/emailedittext"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="E-Mail"
-                    android:focusable="false"
-                    android:text="tushartambi@gmail.com"
                     android:enabled="false"
-                    android:inputType="textEmailAddress" />
+                    android:focusable="false"
+                    android:hint="E-Mail"
+                    android:inputType="textEmailAddress"
+                    android:text="tushartambi@gmail.com" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -148,7 +147,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toStartOf="@+id/textInputLayout01"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">
@@ -157,11 +156,12 @@
                     android:id="@+id/dobedittext"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="Date of Birth"
-                    android:focusable="false"
                     android:enabled="false"
-                    android:text="25/11/2929"
-                    android:inputType="textPersonName" />
+                    android:focusable="false"
+                    android:hint="Date of Birth"
+                    android:inputType="textPersonName"
+                    android:text="25/11/2929" />
+
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -172,9 +172,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="32dp"
-                app:layout_constraintStart_toEndOf="@+id/textInputLayout0"
+                android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textInputLayout0"
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -183,15 +183,12 @@
                     android:layout_height="match_parent"
                     android:enabled="false"
                     android:focusable="false"
-                    android:text="23/23/23"
                     android:hint="Date of Joining"
                     android:inputType="textPersonName"
-                    android:maxLength="8" />
+                    android:maxLength="8"
+                    android:text="23/23/23" />
 
             </com.google.android.material.textfield.TextInputLayout>
-
-
-
 
 
             <com.google.android.material.textfield.TextInputLayout
@@ -200,7 +197,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toStartOf="@+id/verifyregisterbutton"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -211,13 +208,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="42dp"
                     android:hint="Phone No."
-                    android:text="8426988382"
-                    android:inputType="numberSigned" />
+                    android:inputType="numberSigned"
+                    android:maxLength="10"
+                    android:text="8426988382" />
 
             </com.google.android.material.textfield.TextInputLayout>
-
-
-
 
 
             <com.google.android.material.textfield.TextInputLayout
@@ -226,8 +221,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toStartOf="@+id/textInputLayout4"
+                app:layout_constraintEnd_toEndOf="@+id/textInputLayout0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">
 
@@ -237,7 +231,7 @@
                     android:layout_height="match_parent"
                     android:hint="Qualification"
                     android:inputType="text"
-                    android:text="Phd. In Maths"/>
+                    android:text="Phd. In Maths" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -245,11 +239,10 @@
                 android:id="@+id/textInputLayout11"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="16dp"
                 app:layout_constraintBottom_toBottomOf="@+id/textInputLayout10"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/textInputLayout10"
+                app:layout_constraintStart_toStartOf="@+id/textInputLayout01"
                 app:layout_constraintTop_toTopOf="@+id/textInputLayout10">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -257,8 +250,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Department"
-                    android:text="CSE"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:text="CSE" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -268,21 +261,21 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="16dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:passwordToggleEnabled="true"
-                app:layout_constraintTop_toBottomOf="@+id/textInputLayout11">
+                app:layout_constraintTop_toBottomOf="@+id/textInputLayout11"
+                app:passwordToggleEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/Universityedittext"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="University"
-                    android:text="Chandigarh University"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:text="Chandigarh University" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -293,22 +286,21 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="16dp"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout9">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/passwordedittext"
-                    android:enabled="false"
-                    android:focusable="false"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:enabled="false"
+                    android:focusable="false"
                     android:hint="Password"
-                    android:text="111111sdfssdfsasfds"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    android:text="111111sdfssdfsasfds" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -359,7 +351,9 @@
         android:alpha=".91"
         android:background="@color/colorPrimary"
         android:cursorVisible="false"
-        android:text="Save Chages"
+        android:text="Save"
+        android:textSize="18sp"
+        android:textColor="#fff"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
