--- a/app/src/main/res/layout/accomplishments_details.xml
+++ b/app/src/main/res/layout/accomplishments_details.xml
@@ -110,7 +110,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView12"
                 app:layout_constraintVertical_bias="0.0" />
 
-            <EditText
+            <TextView
                 android:id="@+id/editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
