--- a/app/src/main/res/layout/authordetail.xml
+++ b/app/src/main/res/layout/authordetail.xml
@@ -9,21 +9,6 @@
 
 
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/searchview_"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:searchBackground="@color/colorPrimary"
-        app:searchSuggestionBackground="@color/colorPrimary"
-        android:textColor="#fff"
-        android:textColorHint="#fff"
-        />
-
-
-
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/first"
@@ -35,13 +20,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:errorEnabled="true"
-        app:layout_constraintTop_toBottomOf="@+id/searchview_">
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/authname"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Author Name"
+            android:hint="Name"
             android:inputType="textPersonName"/>
 
 
@@ -66,7 +51,7 @@
             android:id="@+id/authemail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Author Email"
+            android:hint="Email"
             android:inputType="textPersonName"/>
 
 
@@ -92,7 +77,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="Phone Number"
-            android:inputType="textPersonName"/>
+            android:inputType="phone"
+            android:digits="0123456789"
+            android:maxLength="10"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -105,8 +92,9 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/button"
         android:elevation="4dp"
+        android:textAllCaps="false"
         android:text="Add"
         android:textColor="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -124,9 +112,10 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/button"
         android:elevation="4dp"
         android:text="Cancle"
+        android:textAllCaps="false"
         android:textColor="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
