Download the view and upload a profile pic.

--- a/app/src/main/res/layout/deletepopup.xml
+++ b/app/src/main/res/layout/deletepopup.xml
@@ -47,7 +47,7 @@
                 android:id="@+id/pass1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="Old Password"
+                android:hint="Password"
                 android:inputType="textPassword" />
 
         </com.google.android.material.textfield.TextInputLayout>
