--- a/app/src/main/res/layout/accomplishments_details.xml
+++ b/app/src/main/res/layout/accomplishments_details.xml
@@ -2,17 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/layout"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.detailclass">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="80dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -120,6 +114,7 @@
                 android:layout_marginBottom="16dp"
                 android:focusable="false"
                 android:enabled="false"
+                android:maxLength="200"
                 android:gravity="start"
                 android:text="Paper, patents , projects and honors and awards details will be shown herePaper, patents , projects and honors and awards details will be shown herePaper, patents , projects and honors and awards details will be shown herePaper, patents , projects and honors and awards details will be shown herePaper, patents , projects and honors and awards details will be shown herePaper, patents , projects and honors and awards details will be shown herePaper, patents , projects and honors and awards details will be shown herePaper, patents , projects and honors and awards details will be shown herePaper, patents , projects and honors and awards details will be shown herePaper, patents , projects and honors and awards details will be shown herePaper, patents , projects and honors and awards details will be shown herePaper, patents , projects and honors and awards details will be shown herePaper, patents , projects and honors and awards details will be shown herePaper, patents , projects and honors and awards details will be shown herePaper, patents , projects and honors and awards details will be shown here"
                 android:textColor="#000"
@@ -245,10 +240,6 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-
-
-    </ScrollView>
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
