--- a/app/src/main/res/layout/activity_addpatent.xml
+++ b/app/src/main/res/layout/activity_addpatent.xml
@@ -169,6 +169,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Description"
+                    android:maxLength="200"
                     android:inputType="textPersonName"/>
 
             </com.google.android.material.textfield.TextInputLayout>
