--- a/app/src/main/res/layout/activity_addpublication.xml
+++ b/app/src/main/res/layout/activity_addpublication.xml
@@ -145,6 +145,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Description"
+                    android:maxLength="200"
                     android:inputType="textPersonName"/>
 
 
