--- a/app/src/main/res/layout/edit_page.xml
+++ b/app/src/main/res/layout/edit_page.xml
@@ -9,10 +9,10 @@
     android:background="#C3F8F9F9">
 
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_img"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="56dp"
         android:layout_marginEnd="32dp"
@@ -22,7 +22,9 @@
         app:layout_constraintBottom_toBottomOf="@+id/toolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:civ_border_width="4dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:civ_border_color="@color/colorPrimary"
         app:layout_constraintVertical_bias="0.056" />
 
 
