--- a/app/src/main/res/layout/otp.xml
+++ b/app/src/main/res/layout/otp.xml
@@ -20,6 +20,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:hint="Enter OTP"
+            android:inputType="number"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
