Now download report of individual paper in pdf format.

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     xmlns:tools="http://schemas.android.com/tools"
@@ -59,7 +60,7 @@
             app:layout_constraintTop_toTopOf="@id/constraintLayout2"
             app:layout_constraintVertical_bias="0.0" />
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_img"
             android:layout_width="100dp"
             android:layout_height="100dp"
@@ -67,6 +68,7 @@
             android:layout_marginTop="56dp"
             android:layout_marginEnd="32dp"
             android:clickable="false"
+            android:elevation="10dp"
             android:src="@drawable/p_file"
             app:layout_constraintBottom_toBottomOf="@+id/toolbar"
             app:layout_constraintEnd_toEndOf="parent"
