--- a/app/src/main/res/menu/hod_menu.xml
+++ b/app/src/main/res/menu/hod_menu.xml
@@ -4,5 +4,9 @@
 
     <item android:id="@+id/verify_id"
         android:title="Verify"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
+
+    <item android:id="@+id/download_id"
+        android:title="download report"
+        app:showAsAction="always"/>
 </menu>
