--- a/app/src/main/res/layout/hodlist_row.xml
+++ b/app/src/main/res/layout/hodlist_row.xml
@@ -11,6 +11,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="4dp"
         android:elevation="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
