--- a/app/src/main/res/layout/fragment_profile_fragement.xml
+++ b/app/src/main/res/layout/fragment_profile_fragement.xml
@@ -87,7 +87,7 @@
                             android:layout_height="wrap_content"
                             android:text="Tushar Tambi"
                             android:textSize="18sp"
-                            android:textStyle="normal"
+                            android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -117,7 +117,7 @@
                             android:layout_height="wrap_content"
                             android:text="E-1212"
                             android:textSize="18sp"
-                            android:textStyle="normal"
+                            android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -147,7 +147,7 @@
                             android:layout_height="wrap_content"
                             android:text="tushartambi@gmail.com"
                             android:textSize="18sp"
-                            android:textStyle="normal"
+                            android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -177,7 +177,7 @@
                             android:layout_height="wrap_content"
                             android:text="8426988382"
                             android:textSize="18sp"
-                            android:textStyle="normal"
+                            android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -207,7 +207,7 @@
                             android:layout_height="wrap_content"
                             android:text="CSE"
                             android:textSize="18sp"
-                            android:textStyle="normal"
+                            android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -237,7 +237,7 @@
                             android:layout_height="wrap_content"
                             android:text="Phd."
                             android:textSize="18sp"
-                            android:textStyle="normal"
+                            android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -267,7 +267,7 @@
                             android:layout_height="wrap_content"
                             android:text="Chandigarh University"
                             android:textSize="18sp"
-                            android:textStyle="normal"
+                            android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -298,7 +298,7 @@
                             android:layout_height="wrap_content"
                             android:text="9 oct. 2000"
                             android:textSize="18sp"
-                            android:textStyle="normal"
+                            android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -327,7 +327,7 @@
                             android:layout_height="wrap_content"
                             android:text="9 oct. 2000"
                             android:textSize="18sp"
-                            android:textStyle="normal"
+                            android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
