--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,6 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:textSize="18sp"
                 android:text="Not a Member? Register"
                 android:textColor="@color/colorPrimary"
                 app:layout_constraintEnd_toEndOf="@+id/cardView2"
@@ -89,7 +90,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="150dp"
                 android:layout_marginEnd="32dp"
-                android:layout_marginBottom="80dp"
+                android:layout_marginBottom="100dp"
                 app:cardCornerRadius="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -119,7 +120,7 @@
                         app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
                         app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
                         app:layout_constraintTop_toBottomOf="@+id/forgetpasswordloginbutton"
-                        app:layout_constraintVertical_bias="0.41000003" />
+                        app:layout_constraintVertical_bias="0.32" />
 
 
                     <TextView
@@ -141,6 +142,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
                         android:text="Forgot Password?"
+                        android:visibility="gone"
                         android:textColor="@color/colorPrimary"
                         app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
                         app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />
