--- a/app/src/main/res/layout/fragment_view_fragment.xml
+++ b/app/src/main/res/layout/fragment_view_fragment.xml
@@ -12,7 +12,7 @@
       android:id="@+id/swipe"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
-      android:layout_marginBottom="80dp"
+      android:layout_marginBottom="70dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toEndOf="parent">
@@ -21,7 +21,6 @@
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="fill_parent"
       android:layout_height="match_parent"
-
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent">
@@ -146,13 +145,15 @@
       android:id="@+id/uploadbtn"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginStart="8dp"
+      android:layout_marginStart="16dp"
       android:layout_marginTop="16dp"
-      android:layout_marginEnd="8dp"
+      android:layout_marginEnd="16dp"
       android:layout_marginBottom="8dp"
       android:background="@drawable/button"
       android:text="Upload"
+      android:textAllCaps="false"
       android:textColor="#fff"
+      android:textSize="18sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
