--- a/app/src/main/res/layout/download_hod_data.xml
+++ b/app/src/main/res/layout/download_hod_data.xml
@@ -83,16 +83,16 @@
 
         <Spinner
             android:id="@+id/spinner__"
+            style="@style/Widget.AppCompat.Spinner.Underlined"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="32dp"
-            style="@style/Widget.AppCompat.Spinner.Underlined"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="32dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/button2"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
             app:layout_constraintVertical_bias="0.0" />
